force-app/main/default/objects/User_Object__c/User_Object__c.object-meta.xml
<CustomObject>
    <description>Production user records</description>
    <label>User Object</label>
    <nameField>
        <label>User Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>