force-app/main/default/objects/User_Object__c/fields/ADMIN_TAG__c.field-meta.xml
<CustomField>
    <fullName>ADMIN_TAG__c</fullName>
    <label>ADMIN TAG</label>
    <length>100</length>
    <type>Text</type>
</CustomField>