force-app/main/default/objects/User_Object__c/fields/Associated_User_Object__c.field-meta.xml
<CustomField>
    <fullName>Associated_User_Object__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Associated User records based on account contact relationships</description>
    <label>Associated User Object</label>
    <referenceTo>User_Object__c</referenceTo>
    <relationshipLabel>Associated User Objects</relationshipLabel>
    <relationshipName>User_Objects</relationshipName>
    <type>Lookup</type>
</CustomField>