force-app/main/default/objects/User_Object__c/fields/Associated_User_Object_Email__c.field-meta.xml
<CustomField>
    <fullName>Associated_User_Object_Email__c</fullName>
    <formula>Associated_User_Object__r.Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Associated User Object Email</label>
    <type>Text</type>
</CustomField>