force-app/main/default/objects/User_Object__c/fields/Brightwheel_Plan__c.field-meta.xml
<CustomField>
    <fullName>Brightwheel_Plan__c</fullName>
    <formula>TEXT(School_Object__r.Brightwheel_Plan__c)</formula>
    <label>Brightwheel Plan</label>
    <type>Text</type>
</CustomField>