force-app/main/default/objects/User_Object__c/fields/brightwheel_school_user_uuid__c.field-meta.xml
<CustomField>
    <fullName>brightwheel_school_user_uuid__c</fullName>
    <externalId>true</externalId>
    <label>Brightwheel School User UUID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>