force-app/main/default/objects/User_Object__c/fields/Brightwheel_User_UUID__c.field-meta.xml
<CustomField>
    <fullName>Brightwheel_User_UUID__c</fullName>
    <description>Brightwheel User UUID</description>
    <externalId>true</externalId>
    <label>Brightwheel User UUID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>