force-app/main/default/objects/User_Object__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>User email from production</description>
    <externalId>true</externalId>
    <label>Email</label>
    <type>Email</type>
</CustomField>