force-app/main/default/objects/User_Object__c/fields/is_archive_ready__c.field-meta.xml
<CustomField>
    <fullName>is_archive_ready__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Archive Ready</label>
    <type>Checkbox</type>
</CustomField>