force-app/main/default/objects/User_Object__c/fields/is_user_default_school__c.field-meta.xml
<CustomField>
    <fullName>is_user_default_school__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is user default school</label>
    <type>Checkbox</type>
</CustomField>