force-app/main/default/objects/User_Object__c/fields/Last_Modified_at__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_at__c</fullName>
    <formula>DATETIMEVALUE(LastModifiedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Modified at</label>
    <type>DateTime</type>
</CustomField>