force-app/main/default/objects/User_Object__c/fields/LOGIC_is_matched__c.field-meta.xml
<CustomField>
    <fullName>LOGIC_is_matched__c</fullName>
    <description>LOGIC driven by flow - User record to SFDC lead or contact matching</description>
    <label>LOGIC is matched</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Matched</fullName>
                <default>true</default>
                <label>Not Matched</label>
            </value>
            <value>
                <fullName>Matched</fullName>
            </value>
            <value>
                <fullName>Associated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>