force-app/main/default/objects/User_Object__c/fields/LOGIC_matching_count__c.field-meta.xml
<CustomField>
    <fullName>LOGIC_matching_count__c</fullName>
    <description>Logic populated by &apos;User record to SFDC lead or contact matching&apos; flow for times allotted to try record</description>
    <label>LOGIC_matching_count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>