force-app/main/default/objects/User_Object__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>User phone from production</description>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>