force-app/main/default/objects/User_Object__c/fields/School_Object__c.field-meta.xml
<CustomField>
    <fullName>School_Object__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Populated by flow - User record school lookup and triggered by PB - Production user record trigger</description>
    <label>School Object</label>
    <referenceTo>School_Object__c</referenceTo>
    <relationshipLabel>User Objects</relationshipLabel>
    <relationshipName>User_Objects</relationshipName>
    <type>Lookup</type>
</CustomField>