force-app/main/default/objects/User_Object__c/fields/School_Owner__c.field-meta.xml
<CustomField>
    <fullName>School_Owner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>School Owner</label>
    <type>Checkbox</type>
</CustomField>