force-app/main/default/objects/User_Object__c/fields/User_Created_at__c.field-meta.xml
<CustomField>
    <fullName>User_Created_at__c</fullName>
    <description>Date time the user record was created on the production DB</description>
    <label>User Created at</label>
    <type>DateTime</type>
</CustomField>