force-app/main/default/objects/User_Object__c/fields/User_Role__c.field-meta.xml
<CustomField>
    <fullName>User_Role__c</fullName>
    <description>User roles from production table</description>
    <label>User Role</label>
    <length>40</length>
    <type>Text</type>
</CustomField>