force-app/main/default/objects/User_Object__c/fields/User_Updated_At__c.field-meta.xml
<CustomField>
    <fullName>User_Updated_At__c</fullName>
    <inlineHelpText>Date/Timestamp populated by ETL on the last update performed on this record</inlineHelpText>
    <label>LOGIC User Updated At</label>
    <type>DateTime</type>
</CustomField>