force-app/main/default/objects/User_Object__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Account_Name__c</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Email__c</columns>
    <columns>Phone__c</columns>
    <columns>User_Role__c</columns>
    <columns>School_Owner__c</columns>
    <columns>is_user_default_school__c</columns>
    <columns>is_archive_ready__c</columns>
    <columns>Brightwheel_User_UUID__c</columns>
    <columns>Brightwheel_School_UUID__c</columns>
    <columns>User_Created_at__c</columns>
    <columns>Last_Modified_at__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>